--- a/css/cabecalho.css
+++ b/css/cabecalho.css
@@ -4,20 +4,20 @@
     display: flex;
     flex-direction: column;
 
-    border-bottom: 3px solid #103D4A;
+    border-bottom: 1px solid #103D4A;
 
 }
 
 .cabecalho__logo {
     width: 20%;
     margin: 0 auto;
-    padding: 20px 0;
+    padding: 30px 0;
 }
 
 .cabecalho__navegacao {
     width: 50%;
     margin: 0 auto;
-    padding: 0 0 40px;
+    padding: 0 0 60px;
 }
 
 .cabecalho__navegacao ul{
@@ -31,6 +31,7 @@
 
 .cabecalho__link  {
     margin-right: 20px;
+    cursor: pointer;
 }
 
 .cabecalho__link a {
