--- a/css/chamada.css
+++ b/css/chamada.css
@@ -1,33 +1,47 @@
 .chamada  {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    color: #FFF;
-    text-align: center;
-    
     background-color: #00161C;
 
-    padding-top: 12.25rem;
-    padding-bottom: 2.5rem;
+    display: flex;
+    flex-direction: column;
+
+    text-align: center;
 }
 
 .chamada__titulo {
-    font-family: 'Montserrat', serif;
-    font-size: 2rem;
-    font-weight: 700;
-    text-transform: uppercase;
+    margin: 30px;
 
-    margin-bottom: 1.5rem;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    font-size: 32px;
+    font-style: normal;
+    text-transform: uppercase;
+    color: #FFF;
 }
 
 .chamada__texto {
-    font-size: 1.25rem;
-    line-height: normal;
+    padding: 20px;
 
-    margin: 0 auto 2.5rem;
+    font-weight: 400;
+    font-size: 20px;
+    font-style: normal;
+    line-height: 27px;
+    color: #FFF;
 }
 
 .chamada__botao {
-    width: 100%;
+    padding: 20px 20px;
+    margin: 20px auto 40px;
+
+    border: 1px solid #FFF;
+    border-radius: 8px;
+
+    width: 300px;
+    height: 10px;
+
+    color: #FFF;
+    font-size: 15px;
+    font-style: normal;
+    line-height: 16px;
+
+    cursor: pointer;
 }
