--- a/css/cabecalho.css
+++ b/css/cabecalho.css
@@ -1,48 +1,34 @@
 .cabecalho {
-    background-color: #00161C;
+    color: #CCC;
+
+    width: 100%;
+
+    box-sizing: border-box;
 
     display: flex;
     flex-direction: column;
+    align-items: center;
+
+    padding: 0.75rem 0;
 
     border-bottom: 1px solid #103D4A;
+
+    position: absolute;
 
 }
 
 .cabecalho__logo {
-    width: 20%;
-    margin: 0 auto;
-    padding: 30px 0;
+    margin-bottom: 1rem;
 }
 
 .cabecalho__navegacao {
-    width: 50%;
-    margin: 0 auto;
-    padding: 0 0 60px;
-}
-
-.cabecalho__navegacao ul{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-
-    list-style: none;
+   text-align: center;
 }
 
 .cabecalho__link  {
-    margin-right: 20px;
-    cursor: pointer;
-}
+    margin-right: .7rem;
 
-.cabecalho__link a {
-    text-decoration: none;
+    display: inline-block;
 
-    color: #FFF;
-    font-weight: 400;
-    font-size: 17px;
-    font-style: normal;
-}
-
-.cabecalho__link a:hover {
-    text-decoration: underline;
+    margin: 0 .7rem 1.25rem .7rem;
 }
