--- a/css/chamada.css
+++ b/css/chamada.css
@@ -1,47 +1,32 @@
 .chamada  {
-    background-color: #00161C;
-
     display: flex;
     flex-direction: column;
+    align-items: center;
 
+    color: #FFF;
     text-align: center;
+
+    background-color: #00161C;
+
+    padding: 12.25rem 0 2.5rem 0;
 }
 
 .chamada__titulo {
-    margin: 30px;
-
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Montserrat', serif;
+    font-size: 2rem;
     font-weight: 700;
-    font-size: 32px;
-    font-style: normal;
     text-transform: uppercase;
-    color: #FFF;
+
+    margin-bottom: 1.5rem;
 }
 
 .chamada__texto {
-    padding: 20px;
+    font-size: 1.25rem;
+    line-height: normal;
 
-    font-weight: 400;
-    font-size: 20px;
-    font-style: normal;
-    line-height: 27px;
-    color: #FFF;
+    margin: 0 auto 2.5rem;
 }
 
 .chamada__botao {
-    padding: 20px 20px;
-    margin: 20px auto 40px;
-
-    border: 1px solid #FFF;
-    border-radius: 8px;
-
-    width: 300px;
-    height: 10px;
-
-    color: #FFF;
-    font-size: 15px;
-    font-style: normal;
-    line-height: 16px;
-
-    cursor: pointer;
+   width: 100%;
 }
