Ajustando classes container

--- a/css/base.css
+++ b/css/base.css
@@ -22,8 +22,8 @@ body {
 }
 
 .container {
-    padding-right: 6% !important;
-    padding-left: 6% !important;
+    padding-right: 6%;
+    padding-left: 6%;
 }
 
 .botao {
