--- a/css/cabecalho.css
+++ b/css/cabecalho.css
@@ -9,8 +9,9 @@
     flex-direction: column;
     align-items: center;
 
-    padding: 0.75rem 0;
-
+    padding-top: .75rem;
+    padding-bottom: .75rem;
+    
     border-bottom: 1px solid #103D4A;
 
     position: absolute;
