--- a/css/chamada.css
+++ b/css/chamada.css
@@ -8,7 +8,8 @@
 
     background-color: #00161C;
 
-    padding: 12.25rem 0 2.5rem 0;
+    padding-top: 12.25rem;
+    padding-bottom: 2.5rem;
 }
 
 .chamada__titulo {
