--- a/css/base.css
+++ b/css/base.css
@@ -21,11 +21,33 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 
+h2 {
+    font-family: 'Montserrat', serif; 
+    font-weight: 700;
+    font-size: 1.5rem;
+
+    color: #4F4C4C;
+
+    text-transform: uppercase;
+}
+
 .container {
     padding-right: 6%;
     padding-left: 6%;
 }
 
 .botao {
+    text-align: center;
+    
+    display: block;
 
+    width: 100%;
+    max-width: 350px;
+
+    box-sizing: border-box;
+
+    padding: 1rem 2rem;
+
+    border: 1px solid var(--branco);
+    border-radius: 5px;
 }
