--- a/css/base.css
+++ b/css/base.css
@@ -25,10 +25,11 @@ h2 {
     font-family: 'Montserrat', serif; 
     font-weight: 700;
     font-size: 1.5rem;
-
     color: #4F4C4C;
-
     text-transform: uppercase;
+    text-align: center;
+
+    margin-bottom: 2rem;
 }
 
 .container {
