--- a/css/destaques.css
+++ b/css/destaques.css
@@ -1,49 +1,31 @@
 .destaques {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    width: 100%;
-
-    box-sizing: border-box;
-
-    padding-top: 2.3125rem;
-    padding-bottom: 2.25rem;
-
     background-color: var(--azul-claro);
-}
-
-.destaques__titulo {
     
+    padding-top: 2.5rem;
+    padding-bottom: 2rem;
 }
 
 .destaques__painel {
-    width: 100%;  
-}
-
-.destaques a {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
     margin-top: 2rem;
     margin-bottom: .75rem;
 }
 
 .destaques__painel-imagem {
-    width: 375px;
-    max-width: 375px;
+    width: 100vw;
 
-    margin-bottom: .75rem;
+    box-shadow: 0 2px 10px 5px #00000020;
+
+    margin-bottom: .5rem;
 }
 
 .destaques__painel-texto {
-    width: 90%;
-
-    text-align: justify;
-
-    margin: 0 auto;
-
-    color: #000;
-    font-weight: 400;
-    font-size: 19px;
-    line-height: 26px;
+    font-weight: 700;
+    font-size: 1.2rem;
+    line-height: normal;
 }
 
 .destaques_botao {
