--- a/css/destaques.css
+++ b/css/destaques.css
@@ -23,6 +23,13 @@
     margin-bottom: .5rem;
 }
 
+.destaques__titulo {
+    font-weight: 700;
+    font-size: 1.5rem;
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
 .destaques__painel-texto {
     font-weight: 700;
     font-size: 1.2rem;
