--- a/css/planos.css
+++ b/css/planos.css
@@ -6,34 +6,76 @@
 }
 
 .planos__titulo {
-    display: block;
-
-    text-align: center;
-
     font-weight: 700;
     font-size: 1.5rem;
-    line-height: normal;
+    text-align: center;
 
-    margin-bottom: 1rem;
+    margin-bottom: 1.25rem;
 }
 
 .planos__cartoes {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
     align-items: center;
 }
 
 .cartao {
+    display: flex;
+    flex-direction: column;
+
     background-color: var(--branco);
-    border-radius: 5px;
-
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.063);
-
+    
+    width: 100%;
+    max-width: 300px;
+    
     margin-bottom: 2rem;
 
+    border-radius: 5px;
+    box-shadow: 0px 2px 10px #00000010;
+}
+
+.cartao__titulo {
+    font-weight: 700;
+    font-size: 1.5rem;
+    text-align: center;
+    
+    padding: 0.75rem 0;
+
+    margin-bottom: 0.5rem;
+    
+    border-bottom: 1px solid var(--azul-claro);
+}
+
+.cartao__conteudo {
+    padding: 0 15%;
+}
+
+.cartao__preco {
+    font-weight: 700;
+    font-size: 3rem;
+    text-align: center;
+    
+    margin-top: 1.25rem;
+    margin-bottom: 1.25rem;
+}
+
+.cartao__texto {
+    color: var(--fonte-cinza);
+    line-height: 28px;
+}
+
+.cartao__botao {
+    font-size: 1.25rem;
+    font-weight: 700;
+
     width: 100%;
-    max-width: 400px;
+
+    align-self: center;
+
+    padding: .75rem 2rem;
+
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 .cartao--start {
@@ -46,43 +88,6 @@
 
 .cartao--mega {
     color: var(--planos-cartao-mega);
-}
-
-.cartao__titulo {
-    font-size: 1.5rem;
-    font-weight: 700;
-    text-align: center;
-    
-    padding: 1rem 0;
-    
-    border-bottom: 2px solid var(--cinza-claro);
-}
-
-.cartao__conteudo {}
-
-.cartao__preco {
-    font-size: 3rem;
-    font-weight: 700;
-    font-style: normal;
-    text-align: center;
-
-    padding: 1rem 0;
-}
-
-.cartao__texto {
-    color: var(--fonte-cinza);
-    text-align: center;
-    line-height: 1.6;
-}
-
-.cartao__botao {
-    border: 1px solid;
-    margin: 1.25rem auto;
-
-    font-weight: 700;
-    font-size: 1.25 rem;
-
-    width: 70%;
 }
 
 .cartao__botao--start {
