--- a/css/institucional.css
+++ b/css/institucional.css
@@ -49,3 +49,9 @@
 .institucional__video {
     width: 100vw;
 }
+
+@media screen and (min-width: 768px) {
+    .institucional__video {
+        width: 100%;
+    }
+}
