--- a/css/diferenciais.css
+++ b/css/diferenciais.css
@@ -44,3 +44,11 @@
     line-height: normal;
 }
 
+@media screen and (min-width: 1024px) {
+    .diferenciais {
+        background-color: var(--cinza-claro);
+
+        padding-top: 4.5rem;
+    }
+}
+
