Ajustando versão desktop seção sobre

--- a/css/sobre.css
+++ b/css/sobre.css
@@ -25,8 +25,6 @@
     font-weight: 700;
 }
 
-.sobre__texto--divisao {}
-
 .sobre__plataformas {
     display: flex;
     flex-wrap: wrap;
@@ -35,4 +33,26 @@
     margin-bottom: 1rem;
 }
 
-.sobre__imagem {}
+.sobre__imagem {
+    display: none;
+}
+
+@media screen and (min-width: 1024px) {
+    .sobre {
+        display: flex;
+    }
+
+    .sobre__conteudo {
+        margin-right: 2rem;
+    }
+
+    .sobre__texto--divisao {
+        border-bottom: 1px solid var(--cinza-medio);
+
+        padding-bottom: 2rem;
+    }
+
+    .sobre__imagem {
+        display: block;
+    }
+}
