--- a/css/base.css
+++ b/css/base.css
@@ -47,3 +47,10 @@ h2 {
     border: 1px solid var(--branco);
     border-radius: 5px;
 }
+
+@media screen and (min-width: 1024px) {
+    .container {
+        padding-left: calc((100% - 940px)/2);
+        padding-right: calc((100% - 940px)/2);
+    }
+}
