--- a/css/institucional.css
+++ b/css/institucional.css
@@ -51,7 +51,32 @@
 }
 
 @media screen and (min-width: 768px) {
+    .institucional__contato-email {
+        display: inline-block;
+    }
+
     .institucional__video {
         width: 100%;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .instituicional__conteudo {
+        display: flex;
+        justify-content: space-between;
+
+        text-align: left;
+
+        width: 100%;
+    }
+
+    .institucional__contato-email {
+        display: block;
+    }
+
+    .institucional__video {
+        max-width: 375px;
+
+        align-self: flex-end;
     }
 }
