--- a/css/chamada.css
+++ b/css/chamada.css
@@ -40,7 +40,7 @@
 
 @media screen and (min-width: 1024px) {
     .chamada {
-        background-image: url(/img/bg-intro.jpg);
+        background-image: url(../img/bg-intro.jpg);
         background-size: cover;
 
         padding-top: 12rem;
